public/style.css
/* ... */
.heading-h2.nieuws-cat {
  margin-bottom: 0;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.review-title {
  grid-column-gap: 20px;
  grid-row-gap: 20px;
  margin-bottom: 0;
  font-size: 2.5rem;
}

.heading-h2.review-topic {
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.2;
}

.heading-h2.nieuws-list {
  margin-bottom: 1rem;
}

.blog-content {
  flex-direction: column;
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
  height: 100%;
  grid-area: span 1 / span 2 / span 1 / span 2;
  min-width: 0;
  overflow-wrap: break-word;
}

.blog-item {
  grid-column-gap: 40px;
  grid-row-gap: 16px;
  cursor: pointer;
  background-color: #fff;
  border-radius: 15px;
  grid-template-rows: auto;
  grid-template-columns: 1fr .8fr 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  justify-items: start;
  margin-bottom: 0;
  padding: 30px 20px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
  display: grid;
  box-shadow: 0 22px 34px rgba(0, 0, 0, .06);
  width: 100%;
}


.blog-item:hover {
  transform: scale(1.02);
}

.stick-wrapper {
  position: -webkit-sticky;
  position: sticky;
  top: 85px;
}

.categories-pill {
  cursor: pointer;
  background-color: #fff;
  border-radius: 100px;
  margin-bottom: 0;
  margin-right: 20px;
  padding: 6px 16px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.categories-pill.w--current {
  transform: scale(1.25);
}

.categories-pill:hover {
  transform: scale(1.05);
}

.content {
  padding: 45px 3% 50px;
  animation: slide-in-bottom 1s ease 0ms 1 normal forwards;
}

@keyframes slide-in-bottom {
  0% {
    opacity: 0;
    transform: translateY(50px);
  }

  100% {
    opacity: 1;
    transform: translateY(0);
  }
}

.search-button {
  background-color: #5c4ebd;
  border-radius: 15px;
  width: 60px;
  height: 100%;
  position: static;
  top: 0%;
  bottom: auto;
  left: auto;
  right: 0%;
}

.categories-block {
  flex-flow: column;
  justify-content: flex-end;
  align-items: flex-start;
  margin-top: 40px;
  display: flex;
}

.paragraph-detials-small {
  color: #9899ad;
  flex: 1;
  justify-content: flex-start;
  align-items: flex-end;
  margin-bottom: 0;
  margin-top: 0;
  font-size: 14px;
  line-height: 120%;
  display: flex;
}

.container {
  width: 100%;
  max-width: 1300px;
  height: 100%;
  margin-left: auto;
  margin-right: auto;
}

.title-large {
  color: var(--night);
  margin-bottom: 20px;
  font-size: 20px;
  font-weight: 700;
  line-height: 130%;
}

.title-large.xtra {
  font-size: 30px;
}

.content-left {
  grid-column-gap: 16px;
  grid-row-gap: 50px;
  flex-direction: column;
  grid-template-rows: auto auto auto auto;
  grid-template-columns: 1fr;
  grid-auto-columns: 1fr;
  justify-content: flex-start;
  align-items: center;
  display: flex;
}

.title-small {
  color: var(--night);
  margin-bottom: 4px;
  font-weight: 700;
}

.title-small.pink {
  color: var(--sapphire);
  margin-bottom: 0;
}

.blog-image-wrap {
  border-radius: 10px;
  min-width: 150px;
  overflow: hidden;
  position: relative; /* Add this line */
  width: 100%; /* Add this line */
  padding-top: 56.25%; /* Add this line */
}

.content-right {
  position: -webkit-sticky;
  position: sticky;
}

.seach-bar {
  color: #9899ad;
  border: 1px #000;
  border-radius: 15px;
  height: 60px;
  margin-bottom: 40px;
  padding-left: 20px;
  font-size: 15px;
  box-shadow: 0 12px 14px rgba(0, 0, 0, .06);
}

.search-icon {
  position: absolute;
  top: 22px;
  bottom: 0%;
  left: 22px;
  right: 0%;
}

.search {
  position: relative;
}

.next-button {
  background-color: var(--sapphire);
  cursor: pointer;
  border-radius: 15px;
  margin-top: 0;
  padding: 20px 36px;
  text-decoration: none;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.next-button:hover {
  transform: scale(1.05);
}

.navigation-container-full {
  -webkit-text-stroke-color: var(--transparent);
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1300px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
}

.navigation-menu {
  -webkit-text-stroke-color: var(--transparent);
  justify-content: flex-start;
  align-items: center;
  display: flex;
  animation: nav-in-top 1s ease 0s 1 normal forwards;
}

@keyframes nav-in-top {
	0% {
		opacity: 0;
		transform: translateY(-50px);
	}

	100% {
		opacity: 1;
		transform: translateY(0);
	}
}

.navigation-link {
  color: #fff;
  padding-left: 25px;
  padding-right: 25px;
  font-size: 17px;
  font-weight: 700;
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.navigation-link:hover {
  transform: scale(1.05);
}

.button-2 {
  color: #fff;
  text-align: center;
  background-color: #193db0;
  border: 2px solid #193db0;
  border-radius: 2rem;
  justify-content: center;
  align-items: center;
  padding: .75rem 1.5rem;
  font-weight: 600;
}

.button-2:hover {
  background-color: #5047b9;
}

.button-2:focus {
  outline-offset: 0px;
  outline: .2rem solid #a0b5f9;
}

.button-2.is-form-submit {
  border-color: var(--sapphire);
  background-color: var(--sapphire);
  transition: transform .2s cubic-bezier(.455, .03, .515, .955);
}

.button-2.is-form-submit:hover {
  transform: scale(1.05);
}

.form-input-2 {
  color: var(--night);
  background-color: #f5f9ff;
  border: 1px #000;
  border-radius: 1.5rem;
  min-height: 3rem;
  margin-bottom: .75rem;
  padding: .75rem 2rem;
}

.form-input-2:focus {
  outline-offset: 0px;
  outline: .2rem solid #a0b5f9;
}

.form-input-2::placeholder {
  color: #333;
}

.form-input-2.is-text-area {
  border-radius: 1.4rem;
  max-width: 624px;
  min-height: 8rem;
  padding-top: 1rem;
}
/* ... */

